--- a/configmap.yaml
+++ b/configmap.yaml
@@ -22,7 +22,7 @@ data:
                 return 404;
             }
             include fastcgi_params;
-            fastcgi_pass localhost:9000;
+            fastcgi_pass php-service:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             fastcgi_param DOCUMENT_ROOT $realpath_root;
