--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,20 +15,20 @@ spec:
         app: php-multiple-container
     spec:
       containers:
+        - image: adminvitcon/my-php-app:0.0.1
+          name: php
+          volumeMounts:
+            - name: app-volume
+              mountPath: /app
         - image: adminvitcon/my-nginx-app:0.0.2
           name: nginx
           ports:
             - containerPort: 80
           volumeMounts:
-            - mountPath: /etc/nginx/conf.d
-              name: nginx-config
-            - mountPath: /app
-              name: app-volume
-        - image: adminvitcon/my-php-app:0.0.1
-          name: php
-          volumeMounts:
-            - mountPath: /app
-              name: app-volume
+            - name: nginx-config
+              mountPath: /etc/nginx/conf.d
+            - name: app-volume
+              mountPath: /app
       volumes:
         - name: nginx-config
           configMap:
