--- a/configmap.yaml
+++ b/configmap.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  creationTimestamp: null
-  name: nginx-config
+  name: nginx-config-map
 data:
   config : |
     server {
